# medicinalplantidentification

./: database.py  image_processor.py  image_scraper.py  main.py  model_utils.py  openai_vision.py  plant_identification.db  plant_info.py  pyproject.toml  train_model.py
