[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "efficientnet>=1.1.1",
    "joblib>=1.4.2",
    "numpy>=2.2.3",
    "openai>=1.63.2",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.1",
    "tensorflow>=2.14.0",
    "trafilatura>=2.0.0",
    "xgboost>=2.1.4",
]
